[package]
name = "cyk"
version = "0.1.0"
authors = ["Ma Tianqi <mtq1997@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cyk"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1"
scoped-tls = "1.0"
rustc-hash = "1.1.0"